# solid-rapi4-examples

./: .gitignore  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: doc.yml
c-blinky-ap804/: README.md  c-blinky-ap804.ptsln
c-blinky-ap804/c-blinky-ap804/: main.cpp
c-blinky-cs/: README.md  c-blinky-cs.ptsln
c-blinky-cs/c-blinky-cs/: main.cpp
c-blinky-rtos/: README.md  c-blinky-rtos.ptsln
c-blinky-rtos/c-blinky-rtos/: c-blinky-rtos.ptproj  c-blinky-rtos.ptproj.filters  main.c  main.cpp
c-server-tcpecho/: README.md  Test-Tcp-Echo-Server.ps1  c-server-tcpecho.ptsln
common/: Cargo.toml
common/bcm2711_pac/: Cargo.toml  README.md
common/solid/: Cargo.toml  README.md  build.rs
common/solid/src/: abi.hpp  abi.rs  closure.rs  error.rs  exceptions.rs  fs.rs  interrupt.rs  lib.rs  loader.rs  log.rs  singleton.rs  smp.rs  staticenv.rs  thread.rs  timer.rs  utils.rs
cpp-blinky-ap804/: README.md  cpp-blinky-ap804.ptsln
cpp-blinky-ap804/cpp-blinky-ap804/: cpp-blinky-ap804.ptproj  main.cpp
cpp-blinky-cs/: README.md  cpp-blinky-cs.ptsln
cpp-blinky-cs/cpp-blinky-cs/: main.cpp
cpp-blinky-rtos/: README.md  cpp-blinky-rtos.ptsln
cpp-blinky-rtos-fs/: README.md  cpp-blinky-rtos-fs.ptsln
cpp-blinky-rtos-fs/cpp-blinky-rtos-fs/: main.cpp
cpp-blinky-rtos/cpp-blinky-rtos/: main.cpp
cpp-server-tcpecho/: README.md  cpp-server-tcpecho.ptsln
cpp-server-tcpecho/cpp-server-tcpecho/: main.cpp
doc/: blinky-prepare.md
rust-blinky-pac-ap804/: README.md  rust-blinky-pac-ap804.ptsln
rust-blinky-pac-ap804/rust-blinky-pac-ap804/: main.cpp
rust-blinky-pac-ap804/rustapp/: Cargo.toml  rustapp.ptrsproj
rust-blinky-pac-cs/: README.md  rust-blinky-pac-cs.ptsln
rust-blinky-pac-cs/rustapp/: Cargo.toml  rustapp.ptrsproj
rust-blinky-pac-cs/rustapp/src/: lib.rs
rust-blinky-pac-rtos/: README.md  rust-blinky-pac-rtos.ptsln
rust-blinky-pac-rtos/rustapp/: Cargo.toml
rust-blinky-pac-rtos/rustapp/src/: lib.rs
rust-blinky-pac-std/: README.md  rust-blinky-pac-std.ptsln
rust-blinky-pac-tokio/: README.md  Set-Blinky-Period.ps1  rust-blinky-pac-tokio.ptsln
rust-blinky-pac-tokio/rust-blinky-pac-tokio/: main.cpp  rust-blinky-pac-tokio.ptproj
rust-blinky-pac-tokio/rustapp/: Cargo.toml  rustapp.ptrsproj
rust-blinky-pac-tokio/rustapp/src/: lib.rs
rust-blinky-raw-rtos/: README.md  rust-blinky-raw-rtos.ptsln
rust-blinky-raw-rtos/rustapp/: Cargo.toml
rust-server-gotham/: README.md  rust-server-gotham.ptsln
rust-server-gotham/rust-server-gotham/: rust-server-gotham.ptproj
rust-server-gotham/rustapp/: Cargo.toml  rustapp.ptrsproj
rust-server-gotham/rustapp/src/: cpumon.rs  lib.rs  main.rs  stubs.rs
rust-server-gotham/rustapp/static/: index.html
rust-server-rocket/: README.md  rust-server-rocket.ptsln
rust-server-rocket/rust-server-rocket/: main.cpp
rust-server-rocket/rustapp/: .gitignore  Cargo.toml  rustapp.ptrsproj
rust-server-rocket/rustapp/src/: lib.rs  stubs.rs
rust-server-tcpecho-std/: README.md  rust-server-tcpecho-std.ptsln  rust-server-tcpecho-std.rust-toolchain
rust-server-tcpecho-std/rustapp/: Cargo.toml
rust-server-tcpecho-std/rustapp/src/: lib.rs
rust-server-tcpecho-tokio/: README.md  rust-server-tcpecho-tokio.ptsln
rust-server-tcpecho-tokio/rustapp/: Cargo.toml
rust-server-tcpecho-tokio/rustapp/src/: lib.rs
rustdoc/: crates.js  search-index.js  settings.html  source-files.js
rustdoc/bcm2711_pac/: all.html  index.html  sidebar-items.js  struct.MemoryField.html  struct.Vpa.html
rustdoc/darling/: all.html  index.html  macro.uses_lifetimes.html  macro.uses_type_params.html  struct.Error.html  trait.FromAttributes.html  trait.FromDeriveInput.html  trait.FromField.html  trait.FromGenericParam.html  trait.FromGenerics.html  trait.FromMeta.html  trait.FromTypeParam.html  trait.FromVariant.html  type.Result.html
rustdoc/darling_core/: all.html  index.html  macro.uses_lifetimes.html  macro.uses_type_params.html  trait.FromAttributes.html  trait.FromDeriveInput.html  trait.FromField.html  trait.FromGenericParam.html  trait.FromGenerics.html  trait.FromMeta.html  trait.FromTypeParam.html  trait.FromVariant.html
rustdoc/darling_macro/: all.html  derive.FromAttributes.html  derive.FromDeriveInput.html  derive.FromField.html  derive.FromMeta.html  derive.FromMetaItem.html  derive.FromTypeParam.html  derive.FromVariant.html  index.html
rustdoc/fnv/: all.html  index.html  struct.FnvHasher.html  type.FnvBuildHasher.html  type.FnvHashMap.html  type.FnvHashSet.html
rustdoc/ident_case/: all.html  enum.RenameRule.html  index.html
rustdoc/macropol/: all.html  attr.macropol.html  index.html  sidebar-items.js
rustdoc/proc_macro2/: all.html  enum.Delimiter.html  enum.Spacing.html  enum.TokenTree.html  index.html  struct.Group.html  struct.Ident.html  struct.LexError.html  struct.Literal.html  struct.Punct.html  struct.Span.html  struct.TokenStream.html
rustdoc/quote/: all.html  index.html  macro.format_ident.html  macro.quote.html  macro.quote_spanned.html  trait.IdentFragment.html  trait.ToTokens.html  trait.TokenStreamExt.html
rustdoc/strsim/: all.html  enum.StrSimError.html  fn.damerau_levenshtein.html  fn.generic_damerau_levenshtein.html  fn.generic_hamming.html  fn.generic_jaro.html  fn.generic_jaro_winkler.html  fn.generic_levenshtein.html  fn.hamming.html  fn.jaro.html  fn.jaro_winkler.html  fn.levenshtein.html  fn.normalized_damerau_levenshtein.html  fn.normalized_levenshtein.html  fn.osa_distance.html  fn.sorensen_dice.html  index.html  type.HammingResult.html
rustdoc/syn/: all.html  enum.AttrStyle.html  enum.BinOp.html  enum.Data.html  enum.Expr.html  enum.Fields.html  enum.FnArg.html  enum.ForeignItem.html  enum.GenericArgument.html  enum.GenericMethodArgument.html  enum.GenericParam.html  enum.ImplItem.html  enum.Item.html  enum.Lit.html  enum.MacroDelimiter.html  enum.Member.html  enum.Meta.html  enum.NestedMeta.html  enum.Pat.html  enum.PathArguments.html  enum.RangeLimits.html  enum.ReturnType.html  enum.Stmt.html  enum.StrStyle.html  enum.TraitBoundModifier.html  enum.TraitItem.html  enum.Type.html  fn.parse.html  (+180 more)
(+3435 files in other folders)
