[package]
name = "solid"
version = "0.0.1"
edition = "2021"
license = "0BSD"

[features]
default = []
alloc = []
std = ["alloc"]

[dependencies]
autocxx = "0.22.0"
cxx = "1.0"
macropol = "0.1.3"
paste = "1.0.8"
memoffset = { version = "0.6.5", features = ["unstable_const"] }
once_cell = "1.13.0"
sync_wrapper = "0.1.1"
cfg-if = "1.0.0"

[build-dependencies]
autocxx-build = "0.22.0"
miette = { version = "4.7", features = ["fancy"] }
