[package]
name = "rustapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tock-registers = "0.7.0"

bcm2711_pac.path = "../../common/bcm2711_pac"
solid.path = "../../common/solid"
solid.features = ["std"]

[lib]
crate-type = ["staticlib"]

