[package]
name = "rustapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tock-registers = "0.7.0"
tokio = { version = "1", features = ["rt", "time", "net"] }
futures = "0.3"

bcm2711_pac.path = "../../common/bcm2711_pac"

[patch.crates-io]
mio = { git = "https://github.com/solid-rs/mio", branch = "solid-rs/0.7.x" }
tokio = { git = "https://github.com/solid-rs/tokio", branch = "solid-rs/1.x" }

[lib]
crate-type = ["staticlib"]
