[package]
name = "rustapp"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = { version = "0.9", default-features = false }
tokio = { version = "1", features = ["rt", "time", "net", "sync", "io-util"] }
log = "0.4"
futures = "0.3"

[patch.crates-io]
mio = { git = "https://github.com/solid-rs/mio", branch = "solid-rs/0.8.x" }
socket2 = { git = "https://github.com/solid-rs/socket2", branch = "solid-rs/0.4.x" }
tokio = { git = "https://github.com/solid-rs/tokio", branch = "solid-rs/1.x" }

[lib]
crate-type = ["staticlib"]

# Enable optimization for all dependencies regardless of build configuration
[profile.dev.package."*"]
opt-level = 1
